--- a/src/components/ContactItem/ContactItem.module.css
+++ b/src/components/ContactItem/ContactItem.module.css
@@ -1,8 +1,9 @@
 .item {
   display: flex;
   align-items: center;
-  width: 60%;
+  width: 100%;
   gap: 10px;
+  justify-content: space-between;
 }
 
 .button {
