--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,9 +1,17 @@
+.text {
+  text-align: center;
+  height: 60px;
+  /* background-color: rgb(72, 146, 146); */
+  margin: 0;
+  padding-top: 15px;
+}
+
 .container {
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
-  font-size: 40;
+  align-items: flex-start;
   color: #010101;
   background-color: rgb(108, 180, 180);
+  gap: 15px;
 }
