--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,8 +1,17 @@
 .form {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   gap: 30px;
+  width: 100%;
+}
+.inputform {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  gap: 5px;
+  background-color: cadetblue;
 }
 
 .button {
